--- a/core/pom.xml
+++ b/core/pom.xml
@@ -33,12 +33,12 @@
 
                 <configuration>
                     <launchers>
-                    
+
                         <launcher>
                             <id>download-ontology</id>
                             <mainClass>org.dbpedia.extraction.util.OntologyDownloader</mainClass>
                             <args>
-                                <arg>../ontology.xml</arg> 
+                                <arg>../ontology.xml</arg>
                                 <arg>../ontology.owl</arg>
                                 <arg>${project.version}</arg>
                             </args>
@@ -48,7 +48,7 @@
                             <id>download-mappings</id>
                             <mainClass>org.dbpedia.extraction.util.MappingsDownloader</mainClass>
                             <args>
-                                <arg>../mappings</arg> 
+                                <arg>../mappings</arg>
                             </args>
                         </launcher>
 
@@ -85,12 +85,21 @@
             <groupId>org.scalatest</groupId>
             <artifactId>scalatest_2.11</artifactId>
         </dependency>
-
         <dependency>
-          <groupId>junit</groupId>
-          <artifactId>junit</artifactId>
-          <version>4.8.2</version>
-          <scope>test</scope>
+            <groupId>org.apache.uima</groupId>
+            <artifactId>uimaj-core</artifactId>
+            <version>2.8.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.heideltime</groupId>
+            <artifactId>heideltime</artifactId>
+            <version>2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.8.2</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -99,17 +108,23 @@
             <version>1.1.1</version>
         </dependency>
 
-	 <dependency>
-		<groupId>org.wikidata.wdtk</groupId>
-		<artifactId>wdtk-dumpfiles</artifactId>
-		<version>0.5.0</version>
-	 </dependency>	
-	 
-	 <dependency>
-              <groupId>org.wikidata.wdtk</groupId>
-              <artifactId>wdtk-datamodel</artifactId>
-              <version>0.5.0</version>
-         </dependency>
+        <dependency>
+            <groupId>org.wikidata.wdtk</groupId>
+            <artifactId>wdtk-dumpfiles</artifactId>
+            <version>0.5.0</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>edu.stanford.nlp</groupId>
+            <artifactId>stanford-corenlp</artifactId>
+            <version>3.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.wikidata.wdtk</groupId>
+            <artifactId>wdtk-datamodel</artifactId>
+            <version>0.5.0</version>
+        </dependency>
 
         <dependency>
             <groupId>org.scala-lang</groupId>
@@ -127,7 +142,7 @@
             <version>2.5.0</version>
         </dependency>
 
-		<dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.module</groupId>
             <artifactId>jackson-module-scala_2.11</artifactId>
             <version>2.5.0</version>
